--- a/distance_matrix.ipynb
+++ b/distance_matrix.ipynb
@@ -1,1 +1,98 @@
+import json
+from urllib.request import urlopen
 
+
+def create_data():
+    data = {}
+    data['API_key'] = 'AIzaSyBQSZ2vTwokGjQAfJw0devipSIPp4Zs2qs'
+    data['addresses'] = ['25.0129515081496,121.53971739231032',# 臺灣科技大學側門 0
+                         '25.0118229840727,121.54168120448969',# 臺灣科技大學後門 1
+                         '25.016372883484532,121.54536955505651',# 臺大男一舍前 2 
+                         '25.017301584315742,121.54531668350012',# 臺大男八舍東側 3
+                         '25.02053847784848,121.5414525046573', # 臺大社科院西側 4 
+                         #'25.014625478128043,121.53471143887184',# 捷運公館站(2號出口) 5
+                         '25.016650154984312,121.54520856017523',# 臺大男六舍前 6 
+                         '25.017660966704028,121.5403020887202',# 臺大第一活動中心西南側 7
+                         #'25.01705,121.54435'                  # 基隆長興路口 8
+                         '25.015375825258296,121.54699752657798',# 臺大男七舍前 9
+                         '25.011400860857492,121.54066133192484',# 公館公園 10
+                         '25.015778408267238,121.54292770135469',# 臺大動物醫院前 11
+                         '25.016171069444606,121.54254135832431',# 臺大立體機車停車場 12
+                         '25.01427517435295,121.5438950531919',# 臺大醫學院附設癌醫中心 13
+                         '25.01874497653938,121.54071874350879',# 臺大工綜館南側 14
+                         '25.021275529017817,121.53590999748414',# 臺大新體育館東南側 15
+                         '25.01451415159743,121.54147700316165',# 臺灣科技大學正門 16
+                         #'25.015517214616406,121.53374647999274',# 捷運公館站(3號出口) 17
+                         '25.01846519396644,121.53762108416133',# 臺大小福樓東側 18
+                         '25.01891200015299,121.53603966901075',# 臺大博理館西側 19
+                         '25.015500062173953,121.53828718425068',# 臺大生命科學館西北側 20
+                         '25.01937999597898,121.53907254742217',# 臺大女九舍西南側 21
+                         '25.016899405881674,121.54032376501375',# 臺大總圖書館西南側 22
+                         '25.019881545461473,121.54176707782908',# 臺大社會系館南側 23
+                         '25.018581315228726,121.54252786775004',# 臺大電機二館東南側 24
+        ]
+    return data
+
+def create_distance_matrix(data):
+    bike_plot = data["addresses"]
+    API_key = data["API_key"]
+    # Distance Matrix API only accepts 100 elements per request, so get rows in multiple requests.
+    max_elements = 100
+    num_bike_plot = len(bike_plot)
+    # Maximum number of rows that can be computed per request (6 in this example).
+    max_rows = max_elements // num_bike_plot
+    # num_addresses = q * max_rows + r (q = 2 and r = 4 in this example).
+    q, r = divmod(num_bike_plot, max_rows)
+    dest_bike_plot = bike_plot
+    distance_matrix = []
+
+    # Send q requests, returning max_rows rows per request.
+    for i in range(q):
+        origin_bike_plot = bike_plot[i * max_rows: (i + 1) * max_rows]
+        response = send_request(origin_bike_plot, dest_bike_plot, API_key)
+        distance_matrix += build_distance_matrix(response)
+
+    # Get the remaining remaining r rows, if necessary.
+    if r > 0:
+      origin_bike_plot = bike_plot[q * max_rows: q * max_rows + r]
+      response = send_request(origin_bike_plot, dest_bike_plot, API_key)
+      distance_matrix += build_distance_matrix(response)
+
+    return distance_matrix
+
+
+def send_request(origin_bike_plot, dest_bike_plot, API_key):
+  """ Build and send request for the given origin and destination addresses."""
+  def build_bike_plot_str(bike_plot):
+    # Build a pipe-separated string of addresses
+    address_str = ''
+    for i in range(len(bike_plot) - 1):
+      address_str += bike_plot[i] + '|'
+    address_str += bike_plot[-1]
+    return address_str
+  
+  request = ('https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial'
+             '&origins=' + build_bike_plot_str(origin_bike_plot) +
+             '&destinations=' + build_bike_plot_str(dest_bike_plot) +
+             '&key=' + API_key)
+  #print(request)
+
+  jsonResult = urlopen(request).read()
+  response = json.loads(jsonResult)
+  return response
+
+def build_distance_matrix(response):
+  distance_matrix = []
+  for row in response['rows']:
+    row_list = [row['elements'][j]['distance']['value'] for j in range(len(row['elements']))]
+    distance_matrix.append(row_list)
+  return distance_matrix
+
+def main():
+    data = create_data()
+    distance_matrix = create_distance_matrix(data)
+    print(distance_matrix)
+    print(len(distance_matrix))
+
+if __name__ == '__main__':
+   main()
